@@ -64,8 +64,8 @@ public class GUIUtilTest {
 
     @BeforeEach
     public void setup() {
-        Locale.setDefault(new Locale("en", "US"));
-        GlobalSettings.setLocale(new Locale("en", "US"));
+        Locale.setDefault(Locale.of("en", "US"));
+        GlobalSettings.setLocale(Locale.of("en", "US"));
         Res.setBaseCurrencyCode("BTC");
         Res.setBaseCurrencyName("Bitcoin");
         preferences = mock(Preferences.class);
